# dpqa-compiler

./: readme.md
poetry-project/: .gitignore  pyproject.toml
poetry-project/poetry_project/: z3-solver-tests.ipynb
poetry-project/poetry_project/dpqa_src/: dpqa.py  dpqa_compiler.py  dpqa_instructions.py  dpqa_plotter.py  dpqa_traps.py
poetry-project/poetry_project/notebooks_trashbin/: cirq-test.ipynb  dpqa-cirq-tests.ipynb  dpqa-tools-old.ipynb  project-tasks.ipynb
